--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Berry Bot Backend 2.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
