--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
+    "openai": "^3.1.0",
     "socket.io": "^4.5.4",
     "tmi.js": "^1.8.5",
     "twitch": "^4.6.7",
